# game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.md
assets/pixelart/: background.pyxel  coin_rotate.pyxel  rocket.pyxel  sky.pyxel  squarek_hero.pyxel  squarek_hero_jump.pyxel  tile_bottom.pyxel  tile_top.pyxel
doc/: project.wsd
doc/octave/: calculations.m  motions.m
src/app/: CMakelists.txt  IGameObject.hpp  asteroid.cpp  asteroid.hpp  game.cpp  game.hpp  game_object.hpp  main.cpp
